--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger = debug,system.out
 log4j.appender.system.out=org.apache.log4j.ConsoleAppender
 log4j.appender.system.out.layout=org.apache.log4j.PatternLayout
-log4j.appender.system.out.layout.ConversionPattern=myTest Logger-->%5p{%F:%L}[%d{MM-dd HH\:mm\:ss,SSS}]-%m%n
+log4j.appender.system.out.layout.ConversionPattern= myTest Logger-->%5p{%F:%L}[%d{MM-dd HH\:mm\:ss,SSS}]-%m%n
 
 #config this Project.file logger
 log4j.logger.thisProject.file=INFO,thisProject.file.out
