--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -7,8 +7,8 @@ jdbc.username= root
 jdbc.password= 123456
 
 # 生成实体类所在的包
-package.model=com.mybatis.model
+package.model= springmybatis.model
 # 生成 mapper 类所在的包
-package.mapper=com.mybatis.mapper
+package.mapper=springmybatis.mapper
 # 生成 mapper xml 文件所在的包，默认存储在 resources 目录下
-package.xml= mybatis
+package.xml= springmybatisxml
